(LANDING PAGE) Fix the background image so it covers the whole browser and resizes accordingly

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   font-family: sans-serif;
   background-image: url("https://assets.qz.com/media/6f2636ace242424c3ebd079da714c22b.jpg");
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
 
   --primary: #00a0df;
   --background: #f2f4f8;
